# ScheduleReader2.0

./: CMakeLists.txt  LICENSE  Makefile  makefile  output.ics  readme.md  readme_en.md  schedule
examples/: config.json  config_minimal.json  google.ics  google_format.ics  schedule.xlsx
lib/: CMakeLists.txt
src/: CMakeLists.txt  args.cpp  args.h  calendar.cpp  calendar.h  logger.cpp  logger.h  main.cpp  schedule.cpp  schedule.h  test.cpp
src/include/: args.h  calendar.h  logger.h  schedule.h
src/sources/: args.cpp  calendar.cpp  logger.cpp  schedule.cpp
